--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "kavy-ltd-|-integrated-building-intelligence",
+  "homepage": "https://kavylimited.com.ng/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
